Basic template until Servies section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
+    <!-- Fontawesome website script to enable fonts -->
+    <script src="https://kit.fontawesome.com/7264dcfac4.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="header">
@@ -22,7 +24,7 @@
             </nav>
             <div class="header-text">
                 <p>AI/ML Engineer</p>
-                <h1>Hi, I am <span>Edryn</span> Eazhakadan <br> from Mumbai, India.</h1>
+                <h1>Hi, I am <span>Edryn Eazhakadan</span> <br> from Mumbai, India.</h1>
             </div>
         </div>
     </div>
@@ -51,7 +53,7 @@
                     <div class="tab-contents" id="experience">
                         <ul>
                             <li><span>2024 - Present</span><br>Associate Software Developer at BNP Paribas</li>
-                            <li><span>2023 - 2024</span><br>Intern at 1Accord</li>
+                            <li><span>2023 - 2024</span><br>Software Development Intern at 1Accord</li>
                             <li><span>2022 - 2023</span><br>Senior Member at Team Vaayushastra</li>
                         </ul>
                     </div>
@@ -72,16 +74,19 @@
             <h1 class="sub-title">Services</h1>
             <div class="services-list">
                 <div>
+                    <i class="fa-solid fa-brain"></i>
                     <h2>AI/ML Apps</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae blanditiis atque porro cumque voluptatem earum sapiente dolore laborum veniam, dolorum maiores! Praesentium assumenda architecto voluptate atque? Minus assumenda repellendus explicabo.</p>
                     <a href="#">learn more</a>
                 </div>
                 <div>
+                    <i class="fa-solid fa-magnifying-glass-chart"></i>
                     <h2>Data Analysis</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae blanditiis atque porro cumque voluptatem earum sapiente dolore laborum veniam, dolorum maiores! Praesentium assumenda architecto voluptate atque? Minus assumenda repellendus explicabo.</p>
                     <a href="#">learn more</a>
                 </div>
                 <div>
+                    <i class="fa-solid fa-table"></i>
                     <h2>Data Science</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae blanditiis atque porro cumque voluptatem earum sapiente dolore laborum veniam, dolorum maiores! Praesentium assumenda architecto voluptate atque? Minus assumenda repellendus explicabo.</p>
                     <a href="#">learn more</a>
@@ -89,6 +94,7 @@
             </div>
         </div>
     </div>
+    ----------------portfolio--------------
     <script>
         var tablinks = document.getElementsByClassName("tab-links");
         var tabcontents = document.getElementsByClassName("tab-contents");
