adding project section

--- a/index.html
+++ b/index.html
@@ -77,24 +77,57 @@
                     <i class="fa-solid fa-brain"></i>
                     <h2>AI/ML Apps</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae blanditiis atque porro cumque voluptatem earum sapiente dolore laborum veniam, dolorum maiores! Praesentium assumenda architecto voluptate atque? Minus assumenda repellendus explicabo.</p>
-                    <a href="#">learn more</a>
+                    <a href="#">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-solid fa-magnifying-glass-chart"></i>
                     <h2>Data Analysis</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae blanditiis atque porro cumque voluptatem earum sapiente dolore laborum veniam, dolorum maiores! Praesentium assumenda architecto voluptate atque? Minus assumenda repellendus explicabo.</p>
-                    <a href="#">learn more</a>
+                    <a href="#">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-solid fa-table"></i>
                     <h2>Data Science</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae blanditiis atque porro cumque voluptatem earum sapiente dolore laborum veniam, dolorum maiores! Praesentium assumenda architecto voluptate atque? Minus assumenda repellendus explicabo.</p>
-                    <a href="#">learn more</a>
+                    <a href="#">Learn more</a>
                 </div>
             </div>
         </div>
     </div>
-    ----------------portfolio--------------
+    <!-- ----------------portfolio-------------- -->
+    <div id="portfolio">
+        <div class="container">
+            <h1 class="sub-title">Projects</h1>
+            <div class="work-list">
+                <div class="work">
+                    <img src="images/logo.png" alt="Image">
+                    <div class="layer">
+                        <h3>Detect Phishing attacks</h3>
+                        <p>A system to detect phishing websites using federated learning</p>
+                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+                <div class="work">
+                    <img src="images/logo.png" alt="Image">
+                    <div class="layer">
+                        <h3>GoIdento</h3>
+                        <p>A project to identify academically weak students based on comprehensive parameters and group them into clusters for guidance.</p>
+                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+                <div class="work">
+                    <img src="images/logo.png" alt="Image">
+                    <div class="layer">
+                        <h3>ScanGenius</h3>
+                        <p>A webapp to assess image quality for processing through Amazon Textract, utilising parameters such as BRISQUE</p>
+                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+            </div>
+            <a href="#" class="btn">See more</a>
+        </div>
+    </div>
+    
     <script>
         var tablinks = document.getElementsByClassName("tab-links");
         var tabcontents = document.getElementsByClassName("tab-contents");
