--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
              <nav>
                 <img src="images/logo.png" class= "logo" alt="logo">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#header">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
             <div class="header-text">
@@ -127,7 +127,35 @@
             <a href="#" class="btn">See more</a>
         </div>
     </div>
-    
+    <!-- ----------------contact-------------- -->
+    <div id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="contact-left">
+                    <h1 class="sub-title">Contact Me</h1>
+                    <p><i class="fa-solid fa-envelope"></i>edryn.mailbox@gmail.com</p>
+                    <p><i class="fa-solid fa-phone"></i>9136516262</p>
+                    <div class="social-icons">
+                        <a href="https://www.linkedin.com/in/edryneazhakadan/"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://github.com/AdrynShajan08"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://www.kaggle.com/edryneazhakadan"><i class="fa-brands fa-kaggle"></i></a>
+                    </div>
+                    <a href="images/ResumeEdrynShajan.pdf" download class="btn btn2">Download Resume</a>
+                </div>
+                <div class="contact-right">
+                    <form action="">
+                        <input type="text" name="Name" placeholder="Your name" required>
+                        <input type="email" placeholder="Your email" required>
+                        <textarea name="Message" row="6" placeholder="Your Message"></textarea>
+                        <button type="submit" class="btn btn2">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="copyright">
+             <p>Copyright C Edryn</p>
+        </div>
+    </div>
     <script>
         var tablinks = document.getElementsByClassName("tab-links");
         var tabcontents = document.getElementsByClassName("tab-contents");
